# 3DViewer

./: README.md
build-src-Desktop_x86_darwin_generic_mach_o_64bit-Debug/: CMakeCache.txt  CMakeCache.txt.prev  Makefile  cmake_install.cmake  qtcsettings.cmake
build-src-Desktop_x86_darwin_generic_mach_o_64bit-Debug/.cmake/api/v1/reply/: cache-v2-4b46bf5576e72eeeed25.json  cmakeFiles-v1-0ea6c9793b441ecf0061.json  cmakeFiles-v1-4c6d3093029f6d734d24.json  codemodel-v2-f3fd9fcd812c0db6bc4e.json  index-2024-05-06T17-13-07-0389.json  index-2024-05-17T23-16-16-0384.json  target-QOpenGLWidget-Debug-a3e91ec431041dc65867.json  target-QOpenGLWidget_autogen-Debug-e2b7ef7013e391e68543.json
build-src-Desktop_x86_darwin_generic_mach_o_64bit-Debug/.cmake/api/v1/reply.prev/: cache-v2-0cafdeaa907188280ad1.json  cache-v2-7feb5ab4c2755565d72d.json  cmakeFiles-v1-c4d5f692aa0eecd1c50f.json  cmakeFiles-v1-dbbeaad5e0e9a277d657.json  codemodel-v2-66a4674a407abbf99ff0.json  codemodel-v2-b91004778f3e5bfd09ea.json  index-2024-04-28T20-09-04-0696.json  index-2024-05-17T23-09-28-0581.json  target-QOpenGLWidget-Debug-84242c8645a4c06fd31f.json  target-QOpenGLWidget-Debug-b7c0d5e71758609105cd.json  target-QOpenGLWidget_autogen_timestamp_deps-Debug-55ecce0a62dd723f1ba0.json
build-src-Desktop_x86_darwin_generic_mach_o_64bit-Debug/.qt/: QtDeploySupport.cmake
build-src-Desktop_x86_darwin_generic_mach_o_64bit-Debug/.qtc_clangd/: compile_commands.json
build-src-Desktop_x86_darwin_generic_mach_o_64bit-Debug/.qtc_clangd/.cache/clangd/index/: Availability.h.92C33DBA6DEE6ED0.idx  AvailabilityInternal.h.C1297A5B005B53C9.idx  AvailabilityInternalLegacy.h.F5134916CD1039E0.idx  AvailabilityMacros.h.A2FCEFA5F380031F.idx  (+1128 more)
build-src-Desktop_x86_darwin_generic_mach_o_64bit-Debug/QOpenGLWidget.app/Contents/: Info.plist
build-src-Desktop_x86_darwin_generic_mach_o_64bit-Debug/QOpenGLWidget.app/Contents/MacOS/: QOpenGLWidget
build-src-Desktop_x86_darwin_generic_mach_o_64bit-Debug/QOpenGLWidget_autogen/: deps  moc_predefs.h  mocs_compilation.cpp
build-src-Desktop_x86_darwin_generic_mach_o_64bit-Debug/QOpenGLWidget_autogen/UDFYJ5GYWE/: moc_mainwindow.cpp  moc_mainwindow.cpp.d  moc_myopenglwidget.cpp  moc_myopenglwidget.cpp.d
build-src-Desktop_x86_darwin_generic_mach_o_64bit-Debug/QOpenGLWidget_autogen/include/: ui_mainwindow.h
movingClasses/: movingClasses.h  movingInterface.h
src/: CMakeLists.txt  Makefile  viewerconfig
src/Controller/: controller.cpp  controller.h
src/Model/: checkingSingleton.cpp  checkingSingletonMove.cpp  facade.cpp  facade.h  openFile.cpp  openFile.h  reader.cpp  reader.h  singleton.cpp  singleton.h  viewer.c  viewer.h
src/Test/: test.cc
src/Viwer/: main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  myopenglwidget.cpp  myopenglwidget.h
src/movingClasses/: checkingSingletonMove.cpp  movingClasses.h  movingStrategy.h
src/test/: test_viewer.c
